# Backend_emolab_ET

./: README.md  main.py  pyproject.toml
app/crud/: user.py
app/db/: database.py  models.py
backend/: pyvenv.cfg
backend/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
