[tool.poetry]
name = "template-python-fastapi"  # Update this to change the name of your app
version = "0.1.0"
authors = []  # Update to include your email
readme = "README.md"
description = "Template for a FastAPI + Uvicorn based webserver project"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
aiopg = "^1.4.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
